--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,12 +5,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  color: #fff;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 880px) {
   .profile {
-    width: calc(282px + (880 - 282) * ((100vw - 320px) / (1024 - 320)));
-    padding-top: calc(42px + (40 - 42) * ((100vw - 320px) / (1024 - 320)));
+    padding-top: calc(42px + (40 - 42) * ((100vw - 320px) / (880 - 320)));
     flex-direction: column;
   }
 }
