--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,10 @@
 @import url(../vendor/inter.css);
 
 @import url(../blocks/page/page.css);
-@import url(../blocks/transition/transition.css);
+@import url(../blocks/transition/__link/transition__link.css);
+@import url(../blocks/transition/__image/transition__image.css);
+
+@import url(../blocks/content/content.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
@@ -15,3 +18,10 @@
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__about/profile__about.css);
 @import url(../blocks/profile/__add/profile__add.css);
+
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__photo/element__image.css);
+@import url(../blocks/element/__container-text.css/element__text-container.css);
+@import url(../blocks/element/__title/element__title.css);
+@import url(../blocks/element/__like-button/element__like-button.css);
