--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,8 @@
 
 @import url(../vendor/inter.css);
 
+@import url(../blocks/body/body.css);
+
 @import url(../blocks/page/page.css);
 @import url(../blocks/transition/__link/transition__link.css);
 @import url(../blocks/transition/__image/transition__image.css);
@@ -25,3 +27,6 @@
 @import url(../blocks/element/__container-text.css/element__text-container.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
