Fix: исправить Footer адаптив

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -15,5 +15,7 @@
 @media screen and (max-width: 580px) {
   .footer {
     max-width: 282px;
+    padding-top: calc(48px + (67 - 48) * ((100vw - 320px) / (580 - 320)));
+    padding-bottom: calc(36px + (60 - 36) * ((100vw - 320px) / (580 - 320)));
   }
 }
