--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -6,3 +6,10 @@
   line-height: 22px;
   color: #545454;
 }
+
+@media screen and (max-width: 580px) {
+  .footer__copyright {
+    font-size: calc(14px + (18 - 14) * ((100vw - 320px) / (580 - 320)));
+    line-height: calc(17px + (22 - 17) * ((100vw - 320px) / (580 - 320)));
+  }
+}
