--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,8 +7,7 @@
   max-width: 880px;
   min-width: 320px;
   min-height: 74px;
-  border-bottom: 1px solid rgba(84, 84, 84, .7);;
-
+  border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
 /*
