--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -7,4 +7,11 @@
   height: 19px;
   padding: 0;
   width: 22px;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+.element__like-button:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
