--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -8,6 +8,13 @@
   height: 50px;
   padding: 0;
   border-radius: 2px;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in-out;
+}
+
+.popup__save-button:hover {
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 500px){
