--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -8,6 +8,13 @@
   width: 100%;
   height: 24px;
   margin-bottom: 8px;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+
+.profile__edit:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 880px) {
