--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,10 +3,9 @@
   justify-content: start;
   align-items: start;
   margin: 0 auto 0;
-  padding-top: 45px;
+  padding: 45px 0 41px 0;
   max-width: 880px;
   min-width: 320px;
-  min-height: 74px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
@@ -18,6 +17,6 @@
 @media screen and (max-width: 880px) {
   .header {
     padding-top: calc(28px + (45 - 28) * ((100vw - 320px) / (880 - 320)));
-    min-height: calc(56px + (74 - 56) * ((100vw - 320px) / (880 - 320)));
+    padding-bottom: calc(32px + (41 - 32) * ((100vw - 320px) / (880 - 320)));
   }
 }
