--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,6 @@
 .popup__input {
+  display: flex;
+  margin-bottom: 29.5px;
   border: none;
   border-bottom: 1px solid rgba(0,0,0,.2);
   outline: none;
@@ -6,7 +8,6 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
-  margin: 0 0 1px;
   padding: 0 0 13px;
   width: 100%;
 }
