--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,4 +1,5 @@
 .profile {
+  margin: 0 auto;
   padding-top: 40px;
   max-width: 880px;
   display: flex;
@@ -10,6 +11,7 @@
 @media screen and (max-width: 880px) {
   .profile {
     padding-top: calc(42px + (40 - 42) * ((100vw - 320px) / (880 - 320)));
+    width: calc(282px + (880 - 282) * ((100vw - 320px) / (880 - 320)));
     flex-direction: column;
   }
 }
