--- a/blocks/element/__like-button/_active/element__like-button_active.css
+++ b/blocks/element/__like-button/_active/element__like-button_active.css
@@ -1,4 +1,4 @@
-.element__like-button:active {
+.element__like-button_active {
   background-image: url(../../../../images/element-like_active.svg);
   opacity: 1;
   transition-duration: 0s;
