--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,5 +1,7 @@
 .element {
+  position: relative;
   display: flex;
+  max-height: 361px;
   flex-direction: column;
   border-radius: 10px;
   overflow: hidden;
