--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__trash-button/element__trash-button.css);
 @import url(../blocks/element/__photo/element__image.css);
 @import url(../blocks/element/__container-text/element__text-container.css);
 @import url(../blocks/element/__title/element__title.css);
@@ -38,4 +39,8 @@
 @import url(../blocks/popup/__info/popup__info.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+
+@import url(../blocks/popup/__container-image/popup__container-image.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__image-caption/popup__image-caption.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
