Feat: добавить popup closed escape and overlay

--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,7 @@
 @import url(../blocks/popup/__info/popup__info.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/disable/popup__save-button-disable.css);
 
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/__image/popup__image.css);
