--- a/blocks/popup/__button_disabled/popup__button_disabled.css
+++ b/blocks/popup/__button_disabled/popup__button_disabled.css
@@ -1,7 +1,5 @@
-.popup__save-button-disable {
+.popup__button_disabled {
   background-color: white;
   border: 1px solid rgba(0,0,0,.1);
   color: rgba(0,0,0,.1);
-  width: 100%;
-  height: 50px;
 }
