--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,9 +1,8 @@
-.popup__save-button {
+.popup__button {
   margin-top: 13px;
   background-color: #000;
   border: none;
   color: #fff;
-  cursor: pointer;
   width: 100%;
   height: 50px;
   padding: 0;
@@ -12,13 +11,13 @@
   transition-timing-function: ease-in-out;
 }
 
-.popup__save-button:hover {
+.popup__button:hover {
   opacity: 0.8;
   cursor: pointer;
 }
 
 @media screen and (max-width: 500px){
-  .popup__save-button {
+  .popup__button {
     font-size: 14px;
     height: 46px;
     line-height: 1.214;
