--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
-  justify-content: start;
-  align-items: start;
+  justify-content: flex-start;
+  align-items: flex-start;
   margin: 0 auto 0;
   padding: 45px 0 41px 0;
   max-width: 880px;
