--- a/src/blocks/popup/_opened/popup_opened.css
+++ b/src/blocks/popup/_opened/popup_opened.css
@@ -2,5 +2,5 @@
   cursor: pointer;
   opacity: 1;
   visibility: visible;
-  transition: visibility 0s, opacity .5s ease-out;
+  transition: visibility 0s, opacity .5s ease-in-out;
 }
